--- a/src/components/Meme.css
+++ b/src/components/Meme.css
@@ -9,7 +9,7 @@
 .form{
     display: flex;
     flex-direction: row;
-    width: 90%;
+    width: 100%;
     align-items: center;
     justify-content: center;
     gap: 20px;
@@ -27,10 +27,24 @@
     
 }
 .button{
-    width: 90%;
+    width: 100%;
     background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
 border-radius: 5px;
 color: white;
 font-size: 1.5em;
 padding: 10px;
+}
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+}
+.memeImage{
+    padding: 50px;
+    max-width: 1000px;
+    max-height: 1000px;
+    justify-self: center;
+
+
 }
