--- a/src/components/Meme.css
+++ b/src/components/Meme.css
@@ -2,18 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  
     justify-content: center;
 
 }
 .form{
-    display: flex;
-    flex-direction: row;
+    padding:10px;
     width: 100%;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    margin: 30px;
+   
 
 }
 .form input
@@ -21,9 +18,11 @@
     border: 1px solid #D5D4D8;
     box-sizing: border-box;
     border-radius: 5px;
-    width: 50%;
+    width: 30vw;
     font-size: 1.3em;
     padding: 10px;
+    margin:10px;
+
     
 }
 .button{
@@ -43,8 +42,39 @@ padding: 10px;
 .memeImage{
     padding: 50px;
     max-width: 1000px;
-    max-height: 1000px;
+    height: 500px;
     justify-self: center;
 
 
+}
+.text-boxes{
+    display: flex;
+    justify-content: center;
+    width: 60vw;
+}
+.meme--text{
+    position: relative;
+    text-align: center;
+    
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+.bottom {
+    bottom: 230px;
+}
+.top {
+    bottom:550px;
 }
